# Aardwolf_ColonyGame

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: ProjectOptions.cmake
docs/architecture/: RenderingConstraints.md  WorldDataModel.md
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/aardwolf/core/: BuildInfo.hpp
src/core/include/aardwolf/world/: Chunk.hpp  Coordinates.hpp  Tile.hpp  World.hpp
src/core/src/: BuildInfo.cpp
src/core/src/world/: Chunk.cpp  World.cpp
tests/: CMakeLists.txt
tests/core/: BuildInfoTests.cpp
tests/core/world/: ChunkTests.cpp  CoordinatesTests.cpp  TileTests.cpp  WorldTests.cpp
